Don't change existing users' passwords to default
remove vault.yml include, add update_password: on_create

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -1,11 +1,10 @@
-- include_vars: vault.yml
-
 - name: Add limited user accounts for all Sunrise sysadmins
   user:
     name: "{{ item.name }}"
     password: "{{ item.password }}"
     shell: "{{ item.shell }}"
     groups: sudo
+    update_password: on_create
   loop: "{{ users }}"
   tags: user_password
 
