--- a/linode_create.yml
+++ b/linode_create.yml
@@ -1,5 +1,5 @@
 ---
-# working as of August 21, 2019
+# mostly working as of August 21, 2019 :(
 
 # tasks to create Linode from local machine using web api #
 - hosts: localhost
@@ -41,15 +41,15 @@
   - name: print ipv4 address
     debug:
       var: created_linode.instance.ipv4
-      verbosity: 2
+      verbosity: 1
   - name: print ipv6 address
     debug:
       var: created_linode.instance.ipv6
-      verbosity: 2
+      verbosity: 1
   - name: print the whole fucking thing
     debug:
       var: created_linode.instance
-      verbosity: 3
+      verbosity: 2
   - name: print the root password
     debug:
       var: created_linode.instance.root_pass
@@ -72,14 +72,84 @@
       line: "{{ created_linode.instance.ipv4.0 }}\t{{ linode_label }}"
       state: present
     become: true
+# TODO: Clear known_hosts
+
 
 # tasks on remote server once it has been created #
+# TODO: DISABLE RUNNING THESE TASKS IF SERVER ALREADY EXISTED (how tho?)
 - hosts: sunrise
+  gather_facts: no
   vars:
     ansible_user: root
 
+  tasks:
+  - name: Don't do anything until server is reachable via SSH
+    wait_for_connection:
+      timeout: 120
+  - name: Gather facts for first time
+    setup:
+
+  - name: include user vars
+    include_vars:
+      file: user_vars.yml
+
+  - name: Disallow password authentication
+    lineinfile:
+      dest: /etc/ssh/sshd_config
+      regexp: "^PasswordAuthentication"
+      line: "PasswordAuthentication no"
+      state: present
+    notify: restart ssh
+
+# add user accounts
+  - name: Add limited user accounts for all Sunrise sysadmins
+    user:
+      name: "{{ item.name }}"
+      password: "{{ item.password }}"
+      shell: "{{ item.shell }}"
+      groups: sudo
+      update_password: on_create
+    loop: "{{ users }}"
+    register: new_accounts
+# TODO: Don't do this as a notify, try it as a task at the end of step 3
+    notify: force change password
+#########################################################################
+    tags: user_password
+
+  - name: Add ssh keys for all Sunrise sysadmins
+    authorized_key:
+      user: "{{ item.name }}"
+      key: "{{ item.sshKey }}"
+    loop: "{{ users }}"
+    tags: authorized_keys
+
+  handlers:
+  - name: force change password
+    command: "chage -d 0 {{ item.name }}"
+    when: item.changed
+    loop: "{{ new_accounts.results }}"
+  - name: restart ssh
+    service:
+      name: ssh
+      state: restarted
+
+# tasks on remote server once it has been created #
+- hosts: sunrise
   tasks:
   - name: install aptitude
     apt:
       name: aptitude
       state: present
+  - name: Disallow root SSH access
+    lineinfile:
+      dest: /etc/ssh/sshd_config
+      regexp: "^PermitRootLogin"
+      line: "PermitRootLogin no"
+      state: present
+    notify: restart ssh
+
+  handlers:
+  - name: restart ssh
+    service:
+      name: ssh
+      state: restarted
