install Hugo static site generator
setting up to install Hugo websites

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -87,6 +87,10 @@
   include: new_handcoded.yml
   tags: new_handcoded
 
+- name: set up Hugo websites
+  include: hugo.yml
+  tags: hugo
+
 # TODO: set up Longview - record and view stats, data to help diagnose problems
 
 # TODO: set up e-mail so unattend-upgrades, Wordpress etc. can mail you
