allow for multiple ssh keys per user
We learned how to use subelements to iterate over arrays inside of arrays!

--- a/roles/sunrise/tasks/hugo.yml
+++ b/roles/sunrise/tasks/hugo.yml
@@ -5,3 +5,5 @@
 - name: install latest Hugo .deb from Github
   apt:
     deb: "{{ hugo_deb_url }}"
+
+# TODO: Create our own apt repository for Caddy and Hugo
