--- a/roles/sunrise/vars/hugo.yml
+++ b/roles/sunrise/vars/hugo.yml
@@ -1,1 +1,7 @@
 hugo_deb_url: https://github.com/gohugoio/hugo/releases/download/v0.65.2/hugo_0.65.2_Linux-64bit.deb
+hugo_sites:
+  - title: Sunrise Movement Philadelphia
+    domain: sunrisemovement.dev
+    subdomain: philadelphia
+    theme_repo: https://github.com/sunrisemovement/hugo-black-and-light-theme.git
+    theme_name: black-and-light
