reload caddy if test page changes
I guess it's possible for my test HTML page to change, since I just edited it, and when it does change the server should reload so I can see those changes.

--- a/roles/sunrise/tasks/caddy_v2.yml
+++ b/roles/sunrise/tasks/caddy_v2.yml
@@ -52,6 +52,8 @@
   copy:
     src: index.html
     dest: /srv/{{ test_domain }}/public/
+  notify:
+    - reload caddy
 
 - name: create tmp dir for caddy download
   file:
