re-enable RI PHP site
This involved:
- installing the latest Go 1.14
- adding the ability to either install Caddy from an official binary or build it from source ourselves
- creating a vars file for this task
- uncomment relevant section in Caddyfile

--- a/roles/sunrise/tasks/caddy_v2.yml
+++ b/roles/sunrise/tasks/caddy_v2.yml
@@ -1,3 +1,6 @@
+- name: include vars file
+  include_vars: caddy_v2.yml
+
 # some tips for systemd services: https://github.com/caddyserver/caddy/blob/master/dist/init/linux-systemd/README.md
 - name: install caddy.service file
   copy:
@@ -55,16 +58,19 @@
   notify:
     - reload caddy
 
+# Download binary from GitHub and install it
 - name: create tmp dir for caddy download
   file:
     path: "/tmp/{{ ansible_date_time.date }}-caddydownload"
     state: directory
     mode: 0755
+  when: not building_caddy
 - name: download Caddy binary
   get_url:
     url: "{{ caddy_binary_url }}"
     dest: "/tmp/{{ ansible_date_time.date }}-caddydownload/caddy"
     mode: 0755
+  when: not building_caddy
 # - name: replace caddy binary
 #   synchronize:
 #     mode: pull
@@ -78,13 +84,50 @@
     dest: /usr/local/bin/caddy
   notify:
     - restart caddy
+  when: not building_caddy
+
+# Build latest Caddy from source and install it
+- name: add PPA so we can install latest version of Go
+  apt_repository:
+    repo: ppa:longsleep/golang-backports
+  when: building_caddy
+- name: install latest Go
+  apt:
+    name: '{{ item }}'
+    state: latest
+    update_cache: yes
+    cache_valid_time: 3600
+  loop:
+    - git
+    - golang-go
+  when: building_caddy
+- name: checkout Caddy v2 repository
+  git:
+    repo: https://github.com/caddyserver/caddy.git
+    dest: /tmp/caddy
+    version: v2
+  when: building_caddy
+- name: build Caddy
+  command: go build
+  args:
+    chdir: /tmp/caddy/cmd/caddy
+    creates: /tmp/caddy/cmd/caddy/caddy
+  when: building_caddy
+- name: replace caddy binary
+  copy:
+    remote_src: yes
+    src: /tmp/caddy/cmd/caddy/caddy
+    dest: /usr/local/bin/caddy
+  notify:
+    - restart caddy
+  when: building_caddy    
+
 - name: ensure binary is executable
   file:
     path: /usr/local/bin/caddy
     owner: www-data
     group: www-data
     mode: u=rwx,g=rx,o=rx
-
 - name: start caddy service
   service:
     name: caddy
