--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -101,9 +101,9 @@
   include: new_handcoded.yml
   tags: new_handcoded
 
-- name: set up Hugo websites
-  include: hugo.yml
-  tags: hugo
+# - name: set up Hugo websites
+#   include: hugo.yml
+#   tags: hugo
 
 # TODO: set up Longview - record and view stats, data to help diagnose problems
 
