--- a/linode_destroy.yml
+++ b/linode_destroy.yml
@@ -1,11 +1,11 @@
 ---
 - hosts: localhost
   connection: local
-  vars:
-    linode_label: attenborough
-    linode_token: "{{ sunrise_linode_token }}"
 
   tasks:
+  - name: include variables
+    include_vars:
+      file: roles/sunrise/vars/linode.yml
   - name: pip install linode_api4
     pip:
       name: linode_api4
