failed attempt to make Hugo sites work
I'm pushing this broken code so that Andrew can see the mess we've made in all of its glory. Perhaps we should rewrite this to use the "creates" parameter from the command module instead, to detect when a new Hugo site must be created?

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -43,3 +43,9 @@
     group: www-data
     recurse: yes
   loop: "{{ handcoded_websites }}"
+
+- name: regenerate hugo
+  command: hugo
+  args:
+    chdir: /srv/{{ domain_name }}
+    creates: /srv/{{ domain_name }}/public
