--- a/roles/sunrise/tasks/hugo.yml
+++ b/roles/sunrise/tasks/hugo.yml
@@ -8,18 +8,70 @@
 
 # TODO: Create our own apt repository for Caddy and Hugo
 
+- name: install Caddyfile from template
+  template:
+    src: Caddyfile.j2
+    dest: /etc/caddy/Caddyfile
+    owner: root
+    group: root
+    mode: '0644'
+  notify:
+    - reload caddy
+
 # Create site directories
 - name: create srv directory if it doesn't exist
   file:
-    path: /srv/{{ item.domain }}/{{ item.subdomain }}
+    path: /srv/{{ item.domain }}/{{ item.subdomain }}/public
     state: directory
     mode: 0755
     owner: www-data
     group: www-data
   loop: "{{ hugo_sites }}"
-  register: hugo_sites.output
+  register: output
 
 - name: Create new Hugo site
-  command: hugo new site /srv/{{ item.domain }}/{{ item.subdomain }}
+  # item.item is used because we're iterating over the registered results from creating the directories.
+  # see https://docs.ansible.com/ansible/latest/user_guide/playbooks_loops.html#registering-variables-with-a-loop for results structure
+  # If directory is created, the command is run and item is loop variable containing results, item.item is the hugo_site from prior step.
+  # LOL this is way easier https://docs.ansible.com/ansible/latest/modules/command_module.html
+  command: hugo new site /srv/{{ item.item.domain }}/{{ item.item.subdomain }}/public
+  loop: "{{ output.results }}"
+  become: yes
+  become_user: www-data
+  when: item.changed == true
+
+- name: clone git theme
+  git:
+    repo: "{{ item.theme_repo }}"
+    dest: /srv/{{ item.domain }}/{{ item.subdomain }}/public/themes/{{ item.theme_name }}
   loop: "{{ hugo_sites }}"
-  when: hugo_sites.output.changed == true
+  become: yes
+  become_user: www-data
+  register: theme_changes
+
+- name: create config.toml file from template
+  template:
+    src: config.toml
+    dest: /srv/{{ item.domain }}/{{ item.subdomain }}/public/config.toml
+    owner: www-data
+    group: www-data
+  loop: "{{ hugo_sites }}"
+  register: config_changes
+
+- name: print that shit
+  debug:
+    var: regen_sites
+
+- name: decide which sites to restart
+  set_fact:
+    regen_sites: "{{ theme_changes.results + config_changes.results | default([]) + [item.item] }}"
+  when: item.changed == true
+
+- name: regenerate Hugo site again
+  command: hugo
+  args:
+    chdir: /srv/{{ item.domain }}/{{ item.subdomain }}/public
+  loop: regen_sites
+  
+
+
