start and enable caddy service in one task
Not sure why this was split up into separate tasks. Let's make sure this service is both running *and* persistent through reboots.

--- a/roles/sunrise/tasks/caddy_v2.yml
+++ b/roles/sunrise/tasks/caddy_v2.yml
@@ -128,11 +128,8 @@
     owner: www-data
     group: www-data
     mode: u=rwx,g=rx,o=rx
-- name: start caddy service
+- name: start and enable caddy service
   service:
     name: caddy
     state: started
-- name: enable caddy service
-  service:
-    name: caddy
     enabled: yes
