--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -74,7 +74,7 @@
 # Maybe I should use iptables directly, but it's easier/simpler to set up UFW
 # persistently using Ansible, so let's try it for now.
 # https://www.digitalocean.com/community/tutorials/how-to-set-up-a-firewall-with-ufw-on-ubuntu-18-04
-  include: ufw.yml
+  import_tasks: ufw.yml
   tags: ufw
 
 # TODO: fail2ban?
@@ -90,20 +90,20 @@
   tags: mosh
 
 - name: customize the message of the day when logging in to the server
-  include: motd.yml
+  import_tasks: motd.yml
   tags: motd
 
 - name: setup Caddy V2 web server
-  include: caddy_v2.yml
+  import_tasks: caddy_v2.yml
   tags: caddy_v2
 
 - name: set up some handcoded websites
-  include: new_handcoded.yml
+  import_tasks: new_handcoded.yml
   tags: new_handcoded
 
 # Hugo playbook doesn't work yet
 # - name: set up Hugo websites
-#   include: hugo.yml
+#   import_tasks: hugo.yml
 #   tags: hugo
 
 # TODO: set up Longview - record and view stats, data to help diagnose problems
