--- a/roles/sunrise/vars/caddy_v2.yml
+++ b/roles/sunrise/vars/caddy_v2.yml
@@ -1,3 +1,3 @@
-caddy_binary_url: https://github.com/caddyserver/caddy/releases/download/v2.0.0-beta.15/caddy2_beta15_linux_amd64
+caddy_binary_url: https://github.com/caddyserver/caddy/releases/download/v2.0.0-beta.17/caddy2_beta17_linux_amd64
 test_domain: sunrisemovement.dev
-building_caddy: true
+building_caddy: false
