update Caddy+Hugo binaries
Also we have to disable the "creates" argument when building Caddy if we want to build a different version immediately, otherwise it will see that we've recently built Caddy and won't try building it again.

--- a/roles/sunrise/tasks/caddy_v2.yml
+++ b/roles/sunrise/tasks/caddy_v2.yml
@@ -105,13 +105,13 @@
   git:
     repo: https://github.com/caddyserver/caddy.git
     dest: /tmp/caddy
-    version: v2
+    # version: '{{ caddy_git_version }}'
   when: building_caddy
 - name: build Caddy
   command: go build
   args:
     chdir: /tmp/caddy/cmd/caddy
-    creates: /tmp/caddy/cmd/caddy/caddy
+    # creates: /tmp/caddy/cmd/caddy/caddy
   when: building_caddy
 - name: replace caddy binary
   copy:
