--- a/update_upgrade.yml
+++ b/update_upgrade.yml
@@ -1,4 +1,4 @@
-- hosts: webservers
+- hosts: ubuntu
   become: yes
   tasks:
   - name: update apt sources (if we haven't lately) + upgrade packages
@@ -6,3 +6,11 @@
       update_cache: yes
       cache_valid_time: 3600
       upgrade: safe
+
+- hosts: arch
+  become: yes
+  tasks:
+  - name: Run the equivalent of "pacman -Syu", updating sources and packages
+    pacman: 
+      update_cache: yes
+      upgrade: yes
