--- a/roles/sunrise/vars/linode.yml
+++ b/roles/sunrise/vars/linode.yml
@@ -1,8 +1,8 @@
 # API documentation: https://developers.linode.com/api/v4/
-linode_label: attenborough
+linode_label: brockovich
 linode_type: g6-nanode-1 # https://api.linode.com/v4/linode/types
 linode_region: us-east # https://api.linode.com/v4/regions
-linode_image: linode/ubuntu19.10 # https://api.linode.com/v4/images
+linode_image: linode/arch # https://api.linode.com/v4/images
 # create Personal Access Token by clicking your profile in the upper right
 # My Profile -> API Tokens -> [+] Add a Personal Access Token
 # Give read/write access to at least Linodes, if not everything else
@@ -10,3 +10,6 @@ linode_image: linode/ubuntu19.10 # https://api.linode.com/v4/images
 # under [local:vars] after defining [local] as localhost
 linode_token: "{{ sunrise_linode_token }}"
 # password: "{{ pass_attenborough }}"
+
+# put local_hostname in /usr/local/etc/ansible/host_vars/[servername]
+inventory_directory: /usr/local/etc/ansible/
