--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -3,7 +3,7 @@
     name: "{{ item.name }}"
     password: "{{ item.password }}"
     shell: "{{ item.shell }}"
-    groups: sudo
+    groups: wheel
     update_password: on_create
   loop: "{{ users }}"
   tags: user_password
@@ -29,17 +29,13 @@
   loop: "{{ users|subelements('sshKey') }}"
   tags: authorized_keys
 
-- name: update apt sources + upgrade packages
-  apt:
+- name: update sources + upgrade packages
+  pacman: 
     update_cache: yes
-    cache_valid_time: 3600
-    upgrade: safe
+    upgrade: yes
   tags: updategrade
 
-# first, put local_hostname in /usr/local/etc/ansible/host_vars/[servername]
-- name: ensure hostname utility is installed
-  apt:
-    name: hostname
+# first, put local_hostname in ansible inventory
 - name: set system's hostname
   hostname:
     name: "{{ local_hostname }}"
@@ -48,11 +44,13 @@
   debug:
     msg: Inventory item {{ inventory_hostname }} has hostname {{ ansible_hostname }}
     verbosity: 1
+  tags: hostname
 
 - name: print datetime before setting timezone
   debug:
     var: ansible_date_time
     verbosity: 1
+  tags: timezone
 # to get list of possible timezones, run "timedatectl list-timezones"
 - name: set timezone to NYC
   timezone:
@@ -61,27 +59,18 @@
   tags: timezone
   notify: "restart cron"
 
-- name: install unattended-upgrades
-  apt:
-    name: unattended-upgrades
-# TODO: set up unattended-upgrades
-# Should the server automatically reboot to install security updates?
-# Probably not for a production server, since the server could fail to come
-# back up when no human is paying attention to it. Better to manually reboot
-# so we know someone is watching to see if a reboot breaks anything.
-
 - name: configure firewall using UFW
 # Maybe I should use iptables directly, but it's easier/simpler to set up UFW
 # persistently using Ansible, so let's try it for now.
-# https://www.digitalocean.com/community/tutorials/how-to-set-up-a-firewall-with-ufw-on-ubuntu-18-04
   import_tasks: ufw.yml
   tags: ufw
 
 # TODO: fail2ban?
 
 - name: install mosh # better than SSH over crappy/mobile connections
-  apt:
+  package:
     name: mosh
+  tags: mosh
 - name: allow mosh traffic through ufw
   ufw:
     rule: allow
