add missing quotes, remove cron references
Always quote template expression brackets when they
start a value! Playbook previously refused to run due to syntax error.

Arch Linux doesn't ship with cron by default: https://wiki.archlinux.org/index.php/cron
"There are many cron implementations, but none of them are installed by default as the base system uses systemd/Timers instead."

Also I added some ssh keys. I'm switching to Ed25519 keys and I recommend everyone else do so as well: https://security.stackexchange.com/questions/143442/what-are-ssh-keygen-best-practices

In the long run I wonder whether it would be better to operate our own SSH CA. https://github.com/gravitational/teleport or maybe Hashicorp Vault.

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -1,22 +1,11 @@
-- name: restart cron
-  service:
-    name: cron
-    state: restarted
-  listen: "restart cron"
-  
-# - name: wait 5 secs for cron to restart
-#   wait_for:
-#     timeout: 5
-#   listen: "restart cron"
-
 - name: update facts so we can see if the timezone is correct now
   setup:
-  listen: "restart cron"
+  listen: "print datetime"
 
 - name: print datetime after setting timezone
   debug:
     var: ansible_date_time
-  listen: "restart cron"
+  listen: "print datetime"
 
 # - name: just force systemd to reread configs (2.4 and above)
 #   systemd:
